{
  "common": {
    "next": "Próximo",
    "skip": "Pular",
    "skipInformation": "Pular Informação",
    "configureLater": "Configurar depois",
    "save": "Salvar",
    "saving": "Salvando...",
    "cancel": "Cancelar",
...
    "yourName": "Seu nome",
    "yourNamePlaceholder": "Seu nome",
    "nameRequired": "Campo obrigatório",
    "nameRequiredMessage": "Por favor, digite seu nome para continuar.",
    "introGreeting": "Oi, {userName}!",
    "introWelcome": "Bem-vindo ao Like Me,\n\nPosso te mostrar como funciona o nosso app?",
    "yesSure": "Sim, claro",
    "noStraightToApp": "Não, prefiro ir direto ao ponto",
    "registerTitle": "Vamos começar!",
    "registerInvitationQuestion": "Você veio a convite de um de nossos parceiros?",
    "registerEnterCode": "Insira o código",
    "registerCodePlaceholder": "Código",
    "registerInfoMessage": "Para podermos personalizar a sua experiência, precisamos de mais algumas informações",
...
